module(name = "http_exporter")

bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "rules_oci", version = "2.0.0-alpha5")
bazel_dep(name = "rules_pkg", version = "0.9.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base_debian12",
    digest = "sha256:2102ce121ff1448316b93c5f347118a8e604f5ba7ec9dd7a5c2d8b0eac2941fe",
    image = "gcr.io/distroless/base-debian12",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_base_debian12", "distroless_base_debian12_linux_amd64")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_jmespath_go_jmespath",
    "com_github_prometheus_client_golang",
    "com_github_rs_zerolog",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
)
