load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "http_exporter_lib",
    srcs = ["http_exporter.go"],
    importpath = "github.com/mrdan4es/http_exporter/cmd/http_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/collector",
        "//pkg/config",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "http_exporter",
    embed = [":http_exporter_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "layer",
    srcs = ["http_exporter"],
)

oci_image(
    name = "oci",
    base = "@distroless_base_debian12",
    entrypoint = ["/http_exporter"],
    tars = ["layer"],
    visibility = ["//visibility:public"],
)
